update prereq list in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -53,8 +53,12 @@ repository.type = git
 [Prereqs]
 Data::Dumper  = 0
 Mojo::URL     = 0
+Carp          = 0
+List::Util    = 0
 perl          = 5.020
 
 [Prereqs / TestRequires]
 Pod::Coverage::TrustPod = 0
+Test::More              = 0
+Test::Exception         = 0
 
