--- a/dist.ini
+++ b/dist.ini
@@ -53,6 +53,7 @@ repository.type = git
 [Prereqs]
 Data::Dumper  = 0
 Mojo::URL     = 0
+Mojo::Parameters = 0
 Carp          = 0
 List::Util    = 0
 perl          = 5.020
